# solid2srf

./: .gitignore  Makefile.am  Makefile.in  README  README.md  autogen.sh  configure  configure.ac  configure.in  spchexport2.py  srf_config.h.in
SRF/: Makefile.am  Makefile.in
SRF/base/: Makefile.am  Makefile.in  SRF_Block.cc  SRF_Block.hh  SRF_ContainerHeader.cc  SRF_ContainerHeader.hh  SRF_DataBlock.cc  SRF_DataBlock.hh  SRF_DataBlockHeader.cc  SRF_DataBlockHeader.hh  SRF_File.cc  SRF_File.hh  SRF_IndexBlock.hh  SRF_Read.cc  SRF_Read.hh  SRF_Types.hh  SRF_XMLBlock.cc  SRF_XMLBlock.hh  SRF_util.cc  SRF_util.hh
SRF/reader/: Makefile.am  Makefile.in  SRF_FastLikeConverter.cc  SRF_FastqConverter.cc  SRF_Reader.cc  SRF_ZtrReader.cc
SRF/writer/: Makefile.am  Makefile.in  SOLiDtestData.srf  SRF_CommandLineArgs.cc  SRF_CommandLineArgs.hh  SRF_SOLiDWriter.cc  SRF_SOLiDWriter.hh  SRF_SOLiDcfastaFile.cc  SRF_SOLiDcfastaFile.hh  SRF_SOLiDfile.cc  SRF_SOLiDfile.hh  SRF_SOLiDintensityFiles.cc  SRF_SOLiDintensityFiles.hh  SRF_SOLiDpairedEndWriter.cc  SRF_SOLiDpairedEndWriter.hh  SRF_SOLiDqualFile.cc  SRF_SOLiDqualFile.hh  SRF_SOLiDsingleEndWriter.cc  SRF_SOLiDsingleEndWriter.hh  SRF_SOLiDstructs.hh  SRF_WriteGenSOLiD.cc  vvv
SRF/ztr/: SRF_SolidZtrRead.hh  SRF_ZtrRead.cc  SRF_ZtrRead.hh
ZTR/: Makefile.am  Makefile.in
ZTR/src/: Makefile.am  Makefile.in  ZTR_Chunk.cc  ZTR_Chunk.hh  ZTR_ChunkBase.cc  ZTR_ChunkBase.hh  ZTR_ChunkCNF1.cc  ZTR_ChunkCNF1.hh  ZTR_ChunkList.cc  ZTR_ChunkList.hh  ZTR_ChunkREGN.cc  ZTR_ChunkREGN.hh  ZTR_ChunkSAMP.cc  ZTR_ChunkSAMP.hh  ZTR_DataCompression.cc  ZTR_DataCompression.hh  ZTR_DataCompressionRaw.cc  ZTR_DataCompressionRaw.hh  ZTR_MetadataList.cc  ZTR_MetadataList.hh  ZTR_RetrieveChunk.cc  ZTR_RetrieveChunk.hh  ZTR_Types.cc  ZTR_Types.hh  ZTR_util.cc  ZTR_util.hh
testData/: APPLIED_BIOSYSTEMS_DATA_DISCLAIMER.txt
utils/: beadexport.py  gen_sra_xml.py  spchexport2.py  split_solid_reads.py
