lib_LIBRARIES = libsrf.a

libsrf_a_SOURCES = \
        SRF_ContainerHeader.hh \
        SRF_ContainerHeader.cc \
        SRF_File.hh \
        SRF_File.cc \
        SRF_Read.hh \
        SRF_Read.cc \
        SRF_DataBlockHeader.hh \
        SRF_DataBlockHeader.cc \
        SRF_Block.hh \
        SRF_Block.cc \
        SRF_XMLBlock.hh \
        SRF_XMLBlock.cc \
        SRF_DataBlock.hh \
        SRF_DataBlock.cc \
        SRF_util.hh \
        SRF_util.cc

INCLUDES= -I. -I../..

