lib_LIBRARIES = libztr.a

libztr_a_SOURCES = \
        ZTR_ChunkREGN.hh \
        ZTR_ChunkREGN.cc \
        ZTR_ChunkSAMP.hh \
        ZTR_ChunkSAMP.cc \
        ZTR_ChunkCNF1.hh \
        ZTR_ChunkCNF1.cc \
        ZTR_ChunkList.hh \
        ZTR_ChunkList.cc \
        ZTR_ChunkBase.hh \
        ZTR_ChunkBase.cc \
        ZTR_Chunk.hh \
        ZTR_Chunk.cc \
        ZTR_DataCompression.hh \
        ZTR_DataCompression.cc \
        ZTR_DataCompressionRaw.hh \
        ZTR_DataCompressionRaw.cc \
        ZTR_MetadataList.hh \
        ZTR_MetadataList.cc \
        ZTR_Types.hh \
        ZTR_Types.cc \
        ZTR_util.hh \
        ZTR_util.cc

INCLUDES= -I. -I../..

